# Search-Engine

./: CMakeLists.txt  README.txt  file_dict.txt  file_dictionary.cpp  file_dictionary.h  file_paths.h  file_paths.txt  forward_index.txt  indexer.cpp  indexer.h  inverse_index.txt  main.cpp  parser_output.txt  query_processor.cpp  query_processor.h  tokenizer.cpp  tokenizer.h  vsm_output.txt  word_dict.txt  word_dictionary.cpp  word_dictionary.h
Data_Files/: vsm_output.txt  word_dict.txt
Given files/: Project-3.doc  ~$oject-3.doc
